[package]
name = "ghx_grid"
version = "0.4.0"
description = "2D & 3D grid structures & utilities"
repository = "https://github.com/Henauxg/ghx_grid"
documentation = "https://docs.rs/ghx_grid"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "grid"]
categories = ["game-development"]
readme = "README.md"

[features]
default = []
# Enables some Bevy trait derives
bevy = ["dep:bevy"]
# Enables more Bevy trait derives for reflection
reflect = ["bevy"]

[dependencies]

# Only enabled when the "bevy" feature is enabled
bevy = { version = "0.14.0", optional = true, default-features = false }
