[package]
name = "ghx_grid"
version = "0.6.0"
description = "2D & 3D grid structures & utilities"
repository = "https://github.com/Henauxg/ghx_grid"
documentation = "https://docs.rs/ghx_grid"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "grid"]
categories = ["game-development"]
readme = "README.md"

[features]
default = ["serde"]
serde = ["dep:serde"]

# Enables some Bevy trait derives
bevy = ["dep:bevy"]
# Enables more Bevy trait derives for reflection
reflect = ["bevy"]

[dependencies]

# Only enabled when the "serde" feature is enabled
serde = { version = "1.0.197", optional = true, features = ["derive"] }

# Only enabled when the "bevy" feature is enabled
bevy = { version = "0.16.0-rc.4", optional = true, default-features = false }
